--- a/app/src/main/res/layout/single_row.xml
+++ b/app/src/main/res/layout/single_row.xml
@@ -38,17 +38,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/avatar_imageView"
-                    loadImageFromUrl="@{result.avatar}"
-                    android:layout_width="200dp"
-                    android:layout_height="0dp"
-                    android:scaleType="centerCrop"
-                    android:layout_margin="16dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars" />
+<!--                <ImageView-->
+<!--                    android:id="@+id/avatar_imageView"-->
+<!--                    loadImageFromUrl="@{result.avatar}"-->
+<!--                    android:layout_width="200dp"-->
+<!--                    android:layout_height="0dp"-->
+<!--                    android:scaleType="centerCrop"-->
+<!--                    android:layout_margin="16dp"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintTop_toTopOf="parent"-->
+<!--                    tools:srcCompat="@tools:sample/avatars" />-->
 
                 <TextView
                     android:id="@+id/username_textView"
