Checkpoint when app not crash first time, API call works, but github list is empty

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -27,10 +27,11 @@
             tools:listitem="@layout/single_row"
             tools:visibility="visible" />
 
+<!--        readApiResponse="@{mainViewModel.usersGithubResponse}"-->
+<!--        readDatabase="@{mainViewModel.readUsersGithub}"-->
         <ImageView
             android:id="@+id/error_imageView"
-            readApiResponse="@{mainViewModel.usersGithubResponse}"
-            readDatabase="@{mainViewModel.readUsersGithub}"
+
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_centerInParent="true"
@@ -47,10 +48,11 @@
             app:tint="@color/grey"
             tools:visibility="visible" />
 
+<!--        readApiResponse="@{mainViewModel.usersGithubResponse}"-->
+<!--        readDatabase="@{mainViewModel.readUsersGithub}"-->
         <TextView
             android:id="@+id/error_textView"
-            readApiResponse="@{mainViewModel.usersGithubResponse}"
-            readDatabase="@{mainViewModel.readUsersGithub}"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
