--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.SecondFragment">
+    tools:context=".ui.fragments.UserDetailsFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
