--- a/app/src/main/res/layout/fragment_users_list.xml
+++ b/app/src/main/res/layout/fragment_users_list.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragments.FirstFragment">
+        tools:context=".ui.fragments.UsersListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
