Handle displaying data in recycler view by reading it from db

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,6 +26,6 @@
             app:destination="@id/UsersListFragment" />
         <argument
             android:name="user"
-            app:argType="com.glownia.maciej.usersapp.models.ResultGithub" />
+            app:argType="com.glownia.maciej.usersapp.data.database.entities.UsersGithubEntity" />
     </fragment>
 </navigation>
