--- a/app/src/main/res/layout/single_row.xml
+++ b/app/src/main/res/layout/single_row.xml
@@ -6,13 +6,13 @@
     <data>
 
         <variable
-            name="result"
-            type="com.glownia.maciej.usersapp.models.ResultGithub" />
+            name="usersGithubEntity"
+            type="com.glownia.maciej.usersapp.data.database.entities.UsersGithubEntity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/singleRow"
-        onUserClickListener="@{result}"
+        onUserClickListener="@{usersGithubEntity}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -40,15 +40,16 @@
 
                 <ImageView
                     android:id="@+id/avatar_imageView"
-                    loadImageFromUrl="@{result.avatar}"
-                    android:layout_width="200dp"
-                    android:layout_height="0dp"
-                    android:scaleType="centerCrop"
+                    readImageFromDatabase="@{usersGithubEntity}"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_margin="16dp"
+                    android:scaleType="centerCrop"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@tools:sample/avatars"
+                    android:contentDescription="@string/github_user_s_avatar" />
 
                 <TextView
                     android:id="@+id/username_textView"
@@ -56,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="16dp"
-                    android:text="@{result.username}"
+                    android:text="@{usersGithubEntity.login}"
                     android:textSize="24sp"
                     app:layout_constraintStart_toStartOf="@+id/avatar_imageView"
                     app:layout_constraintTop_toBottomOf="@+id/avatar_imageView"
@@ -70,7 +71,7 @@
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp"
                     android:paddingBottom="16dp"
-                    android:text="@{result.url}"
+                    android:text="@{usersGithubEntity.url}"
                     android:textSize="24sp"
                     app:layout_constraintStart_toStartOf="@+id/username_textView"
                     app:layout_constraintTop_toBottomOf="@+id/username_textView"
