--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="yellow">#FFEB3B</color>
     <color name="grey">#B8BDC3</color>
     <color name="light_grey">#DCEBFD</color>
+    <color name="green">#348037</color>
 </resources>
