--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -6,60 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.UserDetailsFragment">
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:background="@color/light_grey"
-        app:cardCornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.19999999"
-        app:strokeColor="@color/yellow"
-        app:strokeWidth="1dp">
-
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="24dp">
+
+           >
 
             <ImageView
                 android:id="@+id/avatar_imageView"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:scaleType="centerCrop"
-                tools:src="@tools:sample/avatars"
-                android:layout_gravity="center"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@tools:sample/avatars" />
 
             <TextView
                 android:id="@+id/username_textView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Username"
                 android:gravity="center"
-                android:textStyle="bold|italic"
+                android:text="Username"
                 android:textSize="24sp"
+                android:textStyle="bold|italic"
                 android:visibility="visible"
+                app:layout_constraintStart_toStartOf="@+id/avatar_imageView"
+                app:layout_constraintTop_toBottomOf="@+id/avatar_imageView"
                 tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/url_textView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginTop="24dp"
                 android:text="Url"
                 android:textSize="18sp"
                 android:visibility="visible"
+                app:layout_constraintStart_toStartOf="@+id/username_textView"
+                app:layout_constraintTop_toBottomOf="@+id/username_textView"
                 tools:text="Url"
                 tools:visibility="visible" />
 
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
