--- a/app/src/main/res/layout/fragment_users_list.xml
+++ b/app/src/main/res/layout/fragment_users_list.xml
@@ -13,6 +13,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         tools:context=".ui.fragments.UsersListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -20,11 +22,13 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:visibility="visible"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/single_row"
+            app:spanCount="2"
             tools:visibility="visible" />
 
 <!--        readApiResponse="@{mainViewModel.usersGithubResponse}"-->
