--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -6,47 +6,45 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.UserDetailsFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-           >
+        <ImageView
+            android:id="@+id/avatar_imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@tools:sample/avatars" />
 
-            <ImageView
-                android:id="@+id/avatar_imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:src="@tools:sample/avatars" />
+        <TextView
+            android:id="@+id/username_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Username"
+            android:textSize="24sp"
+            android:textStyle="bold|italic"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="@+id/avatar_imageView"
+            app:layout_constraintTop_toBottomOf="@+id/avatar_imageView"
+            tools:visibility="visible" />
 
-            <TextView
-                android:id="@+id/username_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Username"
-                android:textSize="24sp"
-                android:textStyle="bold|italic"
-                android:visibility="visible"
-                app:layout_constraintStart_toStartOf="@+id/avatar_imageView"
-                app:layout_constraintTop_toBottomOf="@+id/avatar_imageView"
-                tools:visibility="visible" />
+        <TextView
+            android:id="@+id/url_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Url"
+            android:textSize="18sp"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="@+id/username_textView"
+            app:layout_constraintTop_toBottomOf="@+id/username_textView"
+            tools:text="Url"
+            tools:visibility="visible" />
 
-            <TextView
-                android:id="@+id/url_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Url"
-                android:textSize="18sp"
-                android:visibility="visible"
-                app:layout_constraintStart_toStartOf="@+id/username_textView"
-                app:layout_constraintTop_toBottomOf="@+id/username_textView"
-                tools:text="Url"
-                tools:visibility="visible" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
