--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,13 @@
     <color name="blue_700">#0054B1</color>
     <color name="blue_500">#1C86EF</color>
     <color name="blue_200">#55A3F3</color>
+    <color name="very_light_blue">#E3EFFB</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FFEB3B</color>
+    <color name="dark_grey">#55575A</color>
     <color name="grey">#B8BDC3</color>
     <color name="light_grey">#DCEBFD</color>
     <color name="green">#348037</color>
