--- a/app/src/main/res/layout/single_row.xml
+++ b/app/src/main/res/layout/single_row.xml
@@ -53,18 +53,18 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="4dp"
                     android:background="@color/blue_700"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/avatar_imageView"
-                    tools:layout_editor_absoluteX="0dp">
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/avatar_imageView">
 
                     <TextView
                         android:id="@+id/username_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingBottom="4dp"
                         android:gravity="center"
+                        android:paddingBottom="4dp"
                         android:text="@{usersGithubEntity.login}"
                         android:textColor="@color/light_grey"
                         android:textSize="22sp"
